# FileMailman

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
app/: CMakeLists.txt
app/include/app/: progressbar.hpp
app/src/: Main.cpp
core/: CMakeLists.txt  simple_test_udp_client.py
core/include/core/: BufferBlock.h  Client.h  Event.hpp  FileManager.h  Message.h  NetworkManager.h  Receiver.h  Sender.h  Server.h  SyncedBitmap.h  ThreadPool.hpp  UdpClient.h  Utils.hpp
core/src/: BufferBlock.cpp  Client.cpp  FileManager.cpp  Main.cpp  NetworkManager.cpp  Receiver.cpp  Sender.cpp  Server.cpp  SyncedBitmap.cpp  UdpClient.cpp
tests/: CMakeLists.txt
tests/src/: test.cpp
